--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.94.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.31.0",
     "googleapis": "^171.2.0",
     "lucide-react": "^0.563.0",
